Maps - fix clusters markers and dropdown z-index

--- a/src/assets/scss/maps.scss
+++ b/src/assets/scss/maps.scss
@@ -82,7 +82,7 @@
             pointer-events: none;
 
             &:has(.show-marker-dropdown) {
-                z-index: 999;
+                z-index: 1000!important;
             }
 
             &:has(.focused-route-wrapper) {
